--- a/build.yaml
+++ b/build.yaml
@@ -5,12 +5,12 @@
 # pass flags to the build command, `snippet` to add a Zephyr snippet, and
 # `artifact-name` to assign a name to distinguish build outputs from each other:
 #
-board: [ "nice_nano_v2" ]
-shield: [ "mantis" ]
-include:
+# board: [ "nice_nano_v2" ]
+# shield: [ "mantis" ]
+# include:
 #   - board: bdn9_rev2
-  - board: nice_nano_v2
-    shield: mantis
+#   - board: nice_nano_v2
+#     shield: mantis
 #   - board: nice_nano_v2
 #     shield: corne_left
 #     snippet: studio-rpc-usb-uart
@@ -18,3 +18,6 @@ include:
 #     artifact-name: corne_left_with_studio
 #
 ---
+include:
+  - board: nice_nano_v2
+    shield: mantis
