--- a/boards/shields/mantis/mantis.conf
+++ b/boards/shields/mantis/mantis.conf
@@ -6,15 +6,15 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 CONFIG_ZMK_DISPLAY=y
 
-CONFIG_ZMK_DISPLAY_INVERT=y
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+#CONFIG_ZMK_DISPLAY_INVERT=y
+#CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
-CONFIG_ZMK_WIDGET_WPM_STATUS=n
+#CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+#CONFIG_ZMK_WIDGET_WPM_STATUS=n
 
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+#CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
